--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "ngx-socket-io": "^4.6.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
